--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,14 @@
+#footer {
+  width: 90%;
+  max-width: 1280px;
+  margin: auto;
+}
+@media only screen and (max-width: 1199px) {
+  #footer {
+    width: 91.6666666667%;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,13 +19,14 @@
 html {
   line-height: 1.5;
   overflow-x: hidden;
+  max-width: 1100px;
 }
 html em {
   font-style: normal;
 }
 
 body {
-  color: #333;
+  color: #000;
   background: #fff;
   font-family: "Noto Sans JP", sans-serif;
   -webkit-text-size-adjust: none;
@@ -29,7 +41,7 @@ body {
   }
 }
 body a {
-  color: #333;
+  color: #000;
   text-decoration: none;
 }
 body img {
@@ -39,6 +51,9 @@ body img {
 }
 body .en {
   font-family: "Open Sans", sans-serif;
+}
+body ::-webkit-scrollbar {
+  display: none;
 }
 
 input, select, textarea {
@@ -100,6 +115,7 @@ li {
   background-color: white;
   box-sizing: border-box;
   z-index: 100;
+  border-right: 1px solid #e6e6e6;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #header {
@@ -401,6 +417,460 @@ li {
     margin-top: 60px;
   }
 }
+#con_page .wrp_slide_list {
+  padding: 0 0 0 5%;
+  margin: 10% 0;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list {
+    padding: 0 0 0 3%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list {
+    margin: 10% 0;
+  }
+}
+#con_page .wrp_slide_list h2 {
+  font-size: 125%;
+  margin-bottom: 3%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 5%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list h2 {
+    font-size: 125%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list h2 {
+    font-size: 107%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list h2 {
+    margin-bottom: 3%;
+  }
+}
+#con_page .wrp_slide_list h2 small {
+  font-size: 82%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list h2 small {
+    font-size: 82%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list h2 small {
+    font-size: 69%;
+  }
+}
+#con_page .wrp_slide_list h2 small:after {
+  content: "";
+  display: inline-block;
+  width: 7px;
+  height: 10px;
+  background: url(../imgs/common/ic/ic_next.svg) no-repeat center;
+  margin-left: 0.5em;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list {
+  width: 100%;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  white-space: nowrap;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li {
+  margin-right: 8px;
+  width: 176px;
+  min-width: 160px;
+  white-space: normal;
+  display: inline-block;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
+    margin-right: 8px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
+    width: 42%;
+  }
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li a {
+  display: block;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_img {
+  border-radius: 16px 16px 0 0;
+  overflow: hidden;
+  background-color: gray;
+  width: 100%;
+  height: 120px;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt {
+  border-radius: 0 0 16px 16px;
+  box-sizing: border-box;
+  border: 1px solid #e6e6e6;
+  padding: 5% 8%;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt span, #con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt small, #con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt dl {
+  display: block;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt span {
+  font-size: 100%;
+  line-height: 1.3;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt span {
+    font-size: 100%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt span {
+    font-size: 82%;
+  }
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt small {
+  font-size: 82%;
+  color: #a4a4a4;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt small {
+    font-size: 82%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt small {
+    font-size: 75%;
+  }
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt small .c-num {
+  margin-left: 0.5em;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt small .c-num strong {
+  color: #5726cb;
+  font-weight: 600;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt small .c-num strong:after {
+  content: "/";
+  font-weight: 500;
+  margin: 0 0.3em;
+  color: #a4a4a4;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list li:last-child {
+  margin-right: 5%;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li {
+  width: 300px;
+  width: 320px;
+  display: inline-flex;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e6e6e6;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li {
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li {
+    margin-bottom: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li {
+    padding-bottom: 5%;
+  }
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .pic {
+  margin-right: 8px;
+  position: relative;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .pic .user {
+  border-radius: 100px;
+  overflow: hidden;
+  width: 48px;
+  height: 48px;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .pic .ic_md {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  line-height: 1;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt {
+  line-height: 1;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .p_id {
+  font-size: 100%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .p_id {
+    font-size: 100%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .p_id {
+    font-size: 82%;
+  }
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .ic_star {
+  font-size: 82%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .ic_star {
+    font-size: 82%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .ic_star {
+    font-size: 75%;
+  }
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dt .ic_star img {
+  width: 0.7em;
+  margin-right: 0.3em;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .info {
+  font-size: 82%;
+  color: #a4a4a4;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .info {
+    font-size: 82%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_slide_list .box_slide_list.player_list li .box_txt dd .info {
+    font-size: 75%;
+  }
+}
+#con_page .wrp_slide_list .con_player_list .box_slide_list li {
+  display: inline-flex;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e6e6e6;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_player_list .box_slide_list li {
+    margin-bottom: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_player_list .box_slide_list li {
+    padding-bottom: 5%;
+  }
+}
+#con_page .wrp_slide_list .con_player_list .box_slide_list li .pic {
+  margin-right: 8px;
+  position: relative;
+}
+#con_page .wrp_slide_list .con_player_list .box_slide_list li .pic .user {
+  border-radius: 100px;
+  overflow: hidden;
+  width: 48px;
+  height: 48px;
+}
+#con_page .wrp_slide_list .con_player_list .box_slide_list li .pic .ic_md {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  line-height: 1;
+}
+#con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt {
+  line-height: 1;
+}
+#con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .p_id {
+  font-size: 100%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .p_id {
+    font-size: 100%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .p_id {
+    font-size: 82%;
+  }
+}
+#con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .ic_star {
+  font-size: 82%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .ic_star {
+    font-size: 82%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .ic_star {
+    font-size: 75%;
+  }
+}
+#con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dt .ic_star img {
+  width: 0.7em;
+  margin-right: 0.3em;
+}
+#con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .info {
+  font-size: 82%;
+  color: #a4a4a4;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .info {
+    font-size: 82%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .cate, #con_page .wrp_slide_list .con_player_list .box_slide_list li .box_txt dd .info {
+    font-size: 75%;
+  }
+}
+#con_page .con_wrd_list {
+  padding: 0 5%;
+  margin: 10% 0;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list {
+    padding: 0 3%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list {
+    margin: 10% 0;
+  }
+}
+#con_page .con_wrd_list h2 {
+  font-size: 125%;
+  margin-bottom: 3%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 5%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_wrd_list h2 {
+    font-size: 125%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list h2 {
+    font-size: 107%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list h2 {
+    margin-bottom: 3%;
+  }
+}
+#con_page .con_wrd_list h2 small {
+  font-size: 82%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_wrd_list h2 small {
+    font-size: 82%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list h2 small {
+    font-size: 69%;
+  }
+}
+#con_page .con_wrd_list h2 small:after {
+  content: "";
+  display: inline-block;
+  width: 7px;
+  height: 10px;
+  background: url(../imgs/common/ic/ic_next.svg) no-repeat center;
+  margin-left: 0.5em;
+}
+#con_page .con_wrd_list .box_wrd_list {
+  display: flex;
+  flex-wrap: wrap;
+}
+#con_page .con_wrd_list .box_wrd_list li {
+  text-align: center;
+  width: 19.2%;
+  margin-left: 1%;
+  margin-bottom: 5%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_wrd_list .box_wrd_list li {
+    width: 24.25%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list .box_wrd_list li {
+    width: 23.5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list .box_wrd_list li {
+    margin-left: 2%;
+  }
+}
+#con_page .con_wrd_list .box_wrd_list li .icon a {
+  background-color: #f2f4f6;
+  width: 100%;
+  border-radius: 16px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 7em;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list .box_wrd_list li .icon a {
+    height: 4.5em;
+  }
+}
+#con_page .con_wrd_list .box_wrd_list li .txt {
+  text-align: center;
+  font-size: 94%;
+  display: block;
+  line-height: 1.7;
+  margin-top: 3%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_wrd_list .box_wrd_list li .txt {
+    font-size: 88%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list .box_wrd_list li .txt {
+    font-size: 63%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list .box_wrd_list li .txt {
+    margin-top: 3%;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #con_page .con_wrd_list .box_wrd_list li:nth-child(5n+1) {
+    margin-left: 0;
+  }
+}
+@media print {
+  #con_page .con_wrd_list .box_wrd_list li:nth-child(5n+1) {
+    margin-left: 0;
+  }
+}
+@media only screen and (max-width: 1199px) {
+  #con_page .con_wrd_list .box_wrd_list li:nth-child(4n+1) {
+    margin-left: 0;
+  }
+}
 #con_page .btn_more {
   margin-top: 50px;
 }
@@ -455,24 +925,7 @@ li {
   position: relative;
   box-sizing: border-box;
   display: block;
-  width: 100%;
-  margin: 0 0 35px;
   text-align: left;
-}
-@media only screen and (max-width: 767px) {
-  #footer {
-    width: 90%;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #footer {
-    margin: 0 0 5%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #footer {
-    margin: 0 auto 15%;
-  }
 }
 @media only screen and (max-width: 767px) {
   #footer {
