--- a/css/scss/common.scss
+++ b/css/scss/common.scss
@@ -10,6 +10,7 @@
 html {
 	line-height: 1.5;
     overflow-x: hidden;
+	max-width: 1100px;
     em {font-style: normal;}
     
 }
@@ -35,7 +36,12 @@ body {
 		line-height: 1;
 	}
     .en {@include font('en');}
+
+	::-webkit-scrollbar {
+		display: none;
+	  }
 }
+
 input, select, textarea {
 	font-size: 100%;
 }
@@ -97,6 +103,7 @@ li {list-style-type: none;}
 	background-color: white;
 	box-sizing: border-box;
 	z-index: 100;
+	border-right: 1px solid $lightGray;
 	.btn_menu {
 		&::after {
 			content: "\f0c9";
@@ -327,6 +334,258 @@ li {list-style-type: none;}
 	@include cV(margin-top, 0, 60px);
     box-sizing: border-box;
 
+	// slide_list_form
+	.wrp_slide_list {
+		@include cV(padding, 0 0 0 5%, 0 0 0 3%);
+		@include cV(margin, 10% 0, 10% 0);
+		h2 {
+			@include fsz-cha(20,20);
+			@include cV(margin-bottom, 3%, 3%);
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			padding-right: 5%;
+			small {
+				@include fsz-cha(13,13,11);
+				&:after {
+					content: "";
+					display: inline-block;
+					width: 7px;
+					height: 10px;
+					background: url(../imgs/common/ic/ic_next.svg) no-repeat center;
+					margin-left: 0.5em;
+				}
+			}
+		}
+		.con_slide_list {
+			.box_slide_list {
+				width: 100%;
+				overflow-x: auto;
+				-webkit-overflow-scrolling: touch;
+				white-space: nowrap;
+				li {
+					@include cV(margin-right, 8px, 8px);
+					@include cV(width, 176px, 42%);
+					min-width: 160px;
+					white-space: normal;
+					display: inline-block;
+					a {
+						display: block;
+						.box_img {
+							border-radius: 16px 16px 0 0;
+							overflow: hidden;
+							background-color: gray;
+							width: 100%;
+							height: 120px;
+							img {
+								display: block;
+								width: 100%;
+								height: 100%;
+								object-fit: cover;
+							}
+						}
+						.box_txt {
+							border-radius: 0 0 16px 16px;
+							box-sizing: border-box;
+							border: 1px solid $lightGray;
+							padding: 5% 8%;
+							span, small, dl {display: block;}
+							span {
+								@include fsz-cha(16,16,13);
+								line-height: 1.3;
+								font-weight: bold;
+								white-space: nowrap;
+								overflow: hidden;
+								text-overflow: ellipsis; 
+							}
+							small {
+								@include fsz-cha(13,13,12);
+								color: $dkGray;
+								.p-num {}
+								.c-num {
+									margin-left: 0.5em;
+									strong {
+										color: $pointColor;
+										font-weight: 600;
+										&:after {
+											content: "/";
+											font-weight: 500;
+											margin: 0 0.3em;
+											color: $dkGray;
+										}
+									}
+								}
+							}
+						}
+					}
+					&:last-child {
+						margin-right: 5%;
+					}
+				}
+				&.player_list {
+					li {
+						width: 300px;
+						@include cV(width, 320px, 80%);
+						display: inline-flex;
+						@include cV(margin-bottom, 20px, 5%);
+						@include cV(padding-bottom, 20px, 5%);
+						border-bottom: 1px solid $lightGray;
+						.pic {
+							margin-right: 8px;
+							position: relative;
+							.user {
+								border-radius: 100px;
+								overflow: hidden;
+								width: 48px;
+								height: 48px;
+							}
+							.ic_md {
+								position: absolute;
+								right: 0;
+								bottom: 0;
+								line-height: 1;
+							}
+						}
+						.box_txt {
+							dt {
+								line-height: 1;
+								.p_id {
+									@include fsz-cha(16,16,13);
+								}
+								.ic_star {
+									@include fsz-cha(13,13,12);
+									img {
+										width: 0.7em; 
+										margin-right: 0.3em;
+									}
+								}
+							}
+							dd {
+								.cate, .info {
+									@include fsz-cha(13,13,12);
+									color: $dkGray;
+								}
+							}
+	
+						}
+					}
+				}
+			}
+		}
+		.con_player_list {
+			.box_slide_list {
+				li {
+					display: inline-flex;
+					@include cV(margin-bottom, 20px, 5%);
+					@include cV(padding-bottom, 20px, 5%);
+					border-bottom: 1px solid $lightGray;
+					.pic {
+						margin-right: 8px;
+						position: relative;
+						.user {
+							border-radius: 100px;
+							overflow: hidden;
+							width: 48px;
+							height: 48px;
+						}
+						.ic_md {
+							position: absolute;
+							right: 0;
+							bottom: 0;
+							line-height: 1;
+						}
+					}
+					.box_txt {
+						dt {
+							line-height: 1;
+							.p_id {
+								@include fsz-cha(16,16,13);
+							}
+							.ic_star {
+								@include fsz-cha(13,13,12);
+								img {
+									width: 0.7em; 
+									margin-right: 0.3em;
+								}
+							}
+						}
+						dd {
+							.cate, .info {
+								@include fsz-cha(13,13,12);
+								color: $dkGray;
+							}
+						}
+
+					}
+				}
+			}
+		}
+	}
+
+	// world_icon_list_form
+	.con_wrd_list {
+		@include cV(padding, 0 5%, 0 3%);
+		@include cV(margin, 10% 0, 10% 0);
+		h2 {
+			@include fsz-cha(20,20);
+			@include cV(margin-bottom, 3%, 3%);
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			padding-right: 5%;
+			small {
+				@include fsz-cha(13,13,11);
+				&:after {
+					content: "";
+					display: inline-block;
+					width: 7px;
+					height: 10px;
+					background: url(../imgs/common/ic/ic_next.svg) no-repeat center;
+					margin-left: 0.5em;
+				}
+			}
+		}
+		.box_wrd_list {
+			display: flex;
+			flex-wrap: wrap;
+			li {
+				text-align: center;
+				@include cV(width, 19.2%, 24.25%, 23.5%);
+				@include cV(margin-left, 1%, 2%);
+				margin-bottom: 5%;
+				.icon {
+					a {
+						background-color: $bgGray;
+						width: 100%;
+						border-radius: 16px;
+						display: inline-flex;
+						justify-content: center;
+						align-items: center;
+						@include cV(height, 7em, 4.5em);
+					}
+				}
+				.txt {
+					text-align: center;
+					@include fsz-cha(15,14,10);
+					display: block;
+					line-height: 1.7;
+					@include cV(margin-top, 3%, 3%);
+				}
+				@include mq(pc) {
+					&:nth-child(5n+1) {
+						margin-left: 0;
+					}
+				}
+				@include mq(tab_sp) {
+					&:nth-child(4n+1) {
+						margin-left: 0;
+					}
+				}
+			}
+		}
+	}
+
+
 
 	// btn style
 	.btn_more {
@@ -369,8 +628,7 @@ li {list-style-type: none;}
 	position: relative;
 	box-sizing: border-box;
     display: block;
-	@include cV(width, 100%, 90%);
-	@include cV(margin, 0 0 35px, 0 0 5%, 0 auto 15%);
+	@extend %bw;
 	@include cV(text-align, left, center);
 	.box_footer {
 		@include fsz-cha(13,13,10);
