--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -3,486 +3,26 @@
 
 #con_page {
   display: block;
-  .con_main {
-      width: 100%;
-      position: relative;
-      box-sizing: border-box;
-      padding: 5%;
-      @include cV(height, 100vh, 90vh);
-      background: url(../imgs/main/img_main.jpg) no-repeat center;
-      background-size: cover;
-      .logo {
-          position: absolute;
-          top: 50px;
-          right: 50px;
-      }
-      .box_slogan {
-          @include cV(width, 540px, 70%, 90%);
-          position: absolute;
-          @include cV(left, 10%, 7%, 5%);
-          @include cV(bottom, 15%, 17%);
-          color: white;
-          h2 {
-              @include font('en');
-              @include fsz-cha(80, 60, 38);
-              line-height: 1;
-          }
-          small {
-              @include font('en');
-              @include fsz-cha(16, 16, 13);
-              @include cV(margin-top, 10px, 3%);
-              display: block;
-          }
-          .txt {
-              @include fsz-cha(20, 20, 14);
-              @include cV(margin-top, 50px, 5%, 5%);
-          }
-      }
-      .box_scroll {
-        position: absolute;
-        @include cV(right, -8%, -25%, -130px);
-        @include cV(bottom, 25%, 30%, 200px);
-        color: white;
-        transform: rotate(-90deg);
-        @include font('en');
-        @include fsz-cha(13, 13, 11);
-        display: none;
-        &:after {
-          content: "";
-          display: inline-block;
-          @include cV(width, 300px, 200px);
-          height: 1px;
-          background-color: white;
-          margin-left: 10px;
-        }
-      }
-      &.page_error {
-        background: url(../imgs/main/img_error.jpg) no-repeat center;
-        background-size: cover;
-          .txt {
-          @include fsz-cha(16, 16, 15);
-          line-height: 1.7;
-          a {
-            color: white;
-            text-decoration: underline;
-          }
-        }
-      }
-      &.page_thanks {
-        background: url(../imgs/main/img_thanks.jpg) no-repeat center;
-        background-size: cover;
-        small {
-          display: block;
-          @include fsz-cha(16, 16, 15);
-        }
-          .txt {
-          @include fsz-cha(16, 16, 15);
-          line-height: 1.7;
-          a {
-            color: white;
-            text-decoration: underline;
-          }
-        }
-      }
+  .con_bn {
+    position: relative;
+    @extend %bw_l;
+    .slider-count {
+      position: absolute;
+      left: 8%;
+      bottom: 8%;
+      border: 1px solid $gray;
+      border-radius: 100px;
+      padding: 0 3%;
+      color: white;
+      background-color: rgba(0,0,0,0.3);
+      display: inline-block;
+      @include fsz-cha(13,13,11);
+      letter-spacing: 0.2em;
+  
     }
-    
-    // title common
-    .con_business, .con_company, .con_portfolio {
-      h2.tit {
-        @include cV(margin-bottom, 80px, 8%, 10%);
-        @include cV(text-align, left, center, center);
-        width: 100%;
-        span {
-          line-height: 1.2;
-          @include font('en');
-          @include fsz-cha(38,30,18);
-          @include cV(margin-bottom, 10px, 3%, 3%);
-          color: #D9D9D9;
-          font-weight: bold;
-          display: block;
-          strong {color: black;}
-        }
-        small {
-          @include fsz-cha(20,15,15);
-          display: block;
-          color: #bebebe;
-          font-weight: 500;
-          line-height: 1;
-        }
-      }
-    }
+  }
 
-    // content top space
-    .con_company, .con_portfolio, .con_contact {
-      @include cV(margin, 150px 0 50px, 15% 0 5%, 20% 0 10%);
-    }
 
-    .con_business {
-        background-color: #f9f9f9;
-        @include cV(padding, 150px 0, 15% 0, 15% 0);
-        .box_category {
-            @include cV(width, 80%, 90%, 90%);
-            margin: auto;
-            display: flex;
-            flex-wrap: wrap;
-            .category_list {
-                display: flex;
-                width: 100%;
-                flex-wrap: wrap;
-                justify-content: space-between;
-                .category {
-                    display: block;
-                    border-radius: 8px;
-                    a {
-                        display: flex;
-                        align-items: flex-end;
-                        @include cV(min-height, 297px, 40vw, 70vw);
-                        box-sizing: border-box;
-                        @include cV(padding, 2em, 2em 1.5em, 1.5em 1em);
-                        .sub_tit {
-                            strong, small, h3 {
-                                display: block;
-                            }
-                            strong {
-                                @include font('en');
-                                @include fsz-cha(26,30,18);
-                                line-height: 1.2;
-                            }
-                            small {
-                                @include font('en');
-                                @include fsz-cha(13,13,12);
-                                font-weight: 600;
-                            }
-                            h3 {
-                                @include fsz-cha(16,16,13);
-                                @include cV(margin-top, 20px, 3%);
-                                font-weight: 400;
-                            }
-                        }
-                    }
-                }
-                .box_one {
-                    @include cV(width, 39%, 100%, 100%);
-                    @include cV(margin-bottom, 0, 2%, 2%);
-                    .brand {
-                        height: 100%;
-                        background: url(../imgs/img_brand.jpg) no-repeat center;
-                        @include cV(background-size, 100%, cover, cover);
-                        transform: all 0.35s;
-                        a {
-                            height: 100%;
-                        }
-                    }
-                }
-                .box_three {
-                    @include cV(width, 60%, 100%, 100%);
-                    display: flex;
-                    flex-wrap: wrap;
-                    justify-content: space-between;
-                    .trading {
-                        background: url(../imgs/img_trading.jpg) no-repeat center;
-                        @include cV(background-size, 100%, cover, cover);
-                        @include cV(margin-bottom, 15px, 2%, 2%);
-                        width: 100%;
-                        a {
-                            color: white;
-                        }
-                    }
-                    .resturant {
-                        @include cV(width, 49%, 49%);
-                        background: url(../imgs/img_resturant.jpg) no-repeat center 75%;
-                        @include cV(background-size, 100%, cover, cover);
-                    }
-                    .ebiz {
-                        @include cV(width, 49%, 49%);
-                        background: url(../imgs/img_ebiz.jpg) no-repeat center;
-                        @include cV(background-size, 100%, cover, cover);
-                        color: white;
-                        a {
-                            color: white;
-                        }
-                    }
-                }
-                .box_two {
-                    width: 100%;
-                    display: flex;
-                    flex-wrap: wrap;
-                    justify-content: space-between;
-                    .interior {
-                        @include cV(width, 39%, 49%, 49%);
-                        background: url(../imgs/img_interior.jpg) no-repeat center;
-                        @include cV(background-size, 100%, cover, cover);
-                        @include cV(margin-top, 15px, 2%, 2%);
-                    }
-                    .sports {
-                        @include cV(width, 60%, 49%, 49%);
-                        background: url(../imgs/img_leisure.jpg) no-repeat center;
-                        @include cV(background-size, 100%, cover, cover);
-                        @include cV(margin-top, 15px, 2%, 2%);
-                        a {
-                            color: white;
-                        }
-                    }
-                }
-                @include mq(pc_l) {
-                    .category {
-                        transition: background-size 1.5s;
-                        &:hover {
-                            background-size: 110%;
-                        }
-                    }
-                }
-                @include mq(pc_s) {
-                  .box_one .brand {
-                    background-size: cover;
-                  }
-                }
-            }
-        }
-        @include mq(pc) {
-            .box_category {
-                min-width: 960px;
-            }
-        }
-    }
 
-    .con_company {
-      width: 100%;
-      
-      .box_tit {
-        h2.tit {
-          text-align: center;
-        }
-      } 
-      .box_txt {
-        @extend %bw;
-        text-align: center;
-        strong, span {display: block;}
-        strong {
-          @include fsz-cha(34,34,20);
-        }
-        span {
-          @include cV(margin-top, 30px, 5%, 5%);
-          @include fsz-cha(18,18,15);
-          line-height: 1.7;
-        }
-        .btn_more a {
-          color: black;
-        }
-      }
-    .box_company {
-        @include cV(margin-top, 100px, 10%, 10%);
-        box-sizing: border-box;
-        @include cV(padding, 230px 0, 20% 0, 25% 0);
-        background: url(../imgs/img_company.jpg) no-repeat center;
-        background-size: cover;
-      }
-    }
 
-    .con_portfolio {
-      box-sizing: border-box;
-      @include cV(padding-left, 100px, 0, 0);
-      .box_tit {
-        @extend %bw_l;
-        @include cV(text-align, left, center, center);
-        h2.tit {
-          margin-bottom: 30px;
-        }
-        .txt {
-          @include cV(margin-top, 20px, 5%, 5%);
-          @include fsz-cha(18,18,15);
-          line-height: 1.7;
-        }
-      }
-      .box_slider {
-        @include cV(margin-top, 100px, 10%, 10%);
-        position: relative;
-        .slider {
-          @include cV(height, 476px, 55vw, 100vw);
-          margin: 0 10px;
-          border-radius: 8px;
-          overflow: hidden;
-          a {
-            @include cV(width, 375px, 85vw);
-            background-color: #d9d9d9;
-            height: 100%;
-            display: flex;
-            box-sizing: border-box;
-            position: relative;
-            .box_tit {
-              width: 100%;
-              @include cV(padding, 30px 25px, 5% 3%, 5% 3%);
-              background-color: rgba(0,0,0,0.3);
-              color: white;
-              box-sizing: border-box;
-              position: absolute;
-              left: 0;
-              bottom: 0;
-              .tit {
-                color: white;
-                line-height: 1.2;
-                @include fsz-cha(30,25,20);
-              }
-              small {
-                display: block;
-                @include fsz-cha(14,14,13);
-              }
-              .txt {
-                @include cV(margin-top, 20px, 3%, 5%);
-                @include fsz-cha(14,14,12);
-              }
-            }
-          }
-          &.golf a {
-            background: url(../imgs/main/img_main_vivusgolf.jpg) no-repeat center;
-            @include cV(background-size, 100%, cover, cover);
-          }
-          &.regina a {
-            background: url(../imgs/main/img_main_vivusregina.jpg) no-repeat center;
-            @include cV(background-size, 100%, cover, cover);
-          }
-          &.cooling a {
-            background: url(../imgs/main/img_main_cooling.jpg) no-repeat center;
-            @include cV(background-size, 100%, cover, cover);
-          }
-          &.mask a {
-            background: url(../imgs/main/img_main_mask.jpg) no-repeat center;
-            @include cV(background-size, 100%, cover, cover);
-          }
-          &.nikibi a {
-            background: url(../imgs/main/img_main_nikibi.jpg) no-repeat center;
-            @include cV(background-size, 100%, cover, cover);
-          }
-        }
-        .slick-prev {display: none!important;}
-        .slick-next {
-          width: 50px;
-          height: 50px;
-          display: inline-flex;
-          border-radius: 100px;
-          justify-content: center;
-          align-items: center;
-          position: absolute;
-          background-color: white;
-          top: 0;
-          left: -25px;
-          bottom: 0;
-          margin: auto;
-          text-indent: -100vw;
-          &:before {
-            content: "";
-            display: block;
-            width: 0;
-            height: 0;
-            border-top: 6px solid transparent;
-            border-bottom: 6px solid transparent;
-            border-left: 8px solid transparent;
-            border-right: 8px solid black;
-            margin-left: -8px;
-            border-radius: 3px;
-            opacity: 0.4;
-          }
-        }
-        .slick-dots {
-          display: flex;
-          justify-content: center;
-          @include cV(margin, 20px 0 0 -100px , 3% 0, 3% 0);
-          li {
-            margin: 0 4px;
-            button {
-              text-indent: -9999px;
-              width: 10px;
-              height: 10px;
-              background-color: #d9d9d9;
-            }
-            &.slick-active {
-              button {
-                background-color: black;
-              }
-            }
-          }
-        }
-      }
-      @include mq(pc) {
-        .box_tit {
-          padding: 0;
-          width: 100%;
-        }
-        .box_slider .slider a {
-          transition: background-size 1.5s;
-          &:hover {
-            background-size: 110%;
-          }
-        }
-        .box_slider {
-          .slick-next {
-            &:hover {
-              cursor: pointer;
-              &:before {
-                opacity: 1;
-              }
-            }
-          }
-          .slick-dots {
-            button:hover {
-              cursor: pointer;
-            }
-          } 
-        }
-      }
-      @include mq(sp) {
-        .box_slider {
-          box-sizing: border-box;
-          overflow: hidden;
-          padding-left: 5%;
-        }
-      }
-    }   
-
-    .con_contact {
-      width: 100%;
-      background: url(../imgs/img_contact.jpg) no-repeat center bottom;
-      @include cV(background-size, cover, 200%, 250%);
-      @include cV(margin-bottom, 1%, 3%, 3%);
-      .box_contact {
-        box-sizing: border-box;
-        position: relative;
-        @include cV(padding, 50px 120px, 5% 3%, 10% 5%);
-        @include cV(text-align, left, center, center);
-        .box_tit, .btn_more {
-          position: relative;
-          z-index: 2;
-        }
-        .box_tit {
-          .tit {
-            span, small {
-              color: white;
-              display: block;
-            }
-            span {
-              @include fsz-cha(20,20,15);
-            }
-            small {
-              font-weight: 500;
-              @include fsz-cha(13,15,10);
-            }
-          }
-          .txt {
-            color: white;
-            @include fsz-cha(16,16,13);
-            @include cV(margin-top, 20px, 3%, 5%);
-          }
-        }
-        &:after {
-          content: "";
-          display: block;
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: rgba(0,0,0,0.1);
-        }
-      }
-    }
 }
