--- a/css/scss/common.scss
+++ b/css/scss/common.scss
@@ -331,7 +331,7 @@ li {list-style-type: none;}
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
-			padding-right: 5%;
+			padding-right: 3%;
 			small {
 				@include fsz-cha(13,13,11);
 				&:after {
@@ -351,7 +351,7 @@ li {list-style-type: none;}
 				-webkit-overflow-scrolling: touch;
 				white-space: nowrap;
 				li {
-					@include cV(margin-right, 8px, 8px);
+					@include cV(margin-right, 8px, 1%);
 					@include cV(width, 176px, 42%);
 					min-width: 160px;
 					white-space: normal;
@@ -503,7 +503,7 @@ li {list-style-type: none;}
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
-			padding-right: 5%;
+			padding-right: 3%;
 			small {
 				@include fsz-cha(13,13,11);
 				&:after {
