--- a/css/common.css
+++ b/css/common.css
@@ -28,7 +28,6 @@ html em {
 
 body {
   color: #000;
-  background: #fff;
   font-family: "Noto Sans JP", sans-serif;
   -webkit-text-size-adjust: none;
   font-size: 100%;
@@ -74,6 +73,7 @@ html.ie8 #con_page {
 
 body {
   position: relative;
+  background-color: white;
 }
 @media only screen and (min-width: 1200px) {
   body .view_tab-sp,
@@ -309,7 +309,7 @@ li {
     height: 56px;
     background-color: #5726cb;
     border-radius: 50%;
-    border: 6px solid white;
+    border: 8px solid white;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -484,21 +484,26 @@ li {
 }
 @media only screen and (max-width: 767px) {
   #con_page {
-    padding-bottom: 30%;
+    padding-bottom: 16%;
   }
 }
 #con_page .wrp_slide_list {
-  padding: 0 0 0 5%;
-  margin: 10% 0;
+  padding: 0 5%;
+  margin: 8% 0;
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .wrp_slide_list {
-    padding: 0 0 0 3%;
+    padding: 0 0 0 4%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_slide_list {
-    margin: 10% 0;
+    padding: 0 0 0 4%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list {
+    margin: 11% 0;
   }
 }
 #con_page .wrp_slide_list .box_tit {
@@ -506,8 +511,8 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-right: 3%;
-  font-size: 125%;
+  padding-right: 0;
+  font-size: 150%;
   font-weight: 500;
 }
 @media only screen and (max-width: 767px) {
@@ -517,7 +522,17 @@ li {
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .wrp_slide_list .box_tit {
-    font-size: 113%;
+    padding-right: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .box_tit {
+    padding-right: 3%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .box_tit {
+    font-size: 125%;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -527,11 +542,18 @@ li {
 }
 #con_page .wrp_slide_list .box_tit .tit {
   display: inline-block;
-  font-weight: 500;
+  font-weight: 700;
 }
 #con_page .wrp_slide_list .box_tit .more {
   font-weight: normal;
   font-size: 60%;
+  display: inline-flex;
+  align-items: center;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .box_tit .more {
+    font-size: 70%;
+  }
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_slide_list .box_tit .more {
@@ -546,22 +568,33 @@ li {
   background: url(../imgs/common/ic/ic_next.svg) no-repeat center;
   margin-left: 0.5em;
 }
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .box_tit .more:after {
+    margin-left: 0.3em;
+  }
+}
 #con_page .wrp_slide_list .con_slide_list .box_slide_list {
   width: 100%;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-  white-space: nowrap;
 }
 #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
-  margin-right: 8px;
-  width: 176px;
-  min-width: 160px;
+  margin-right: 0;
+  width: 24%;
   white-space: normal;
   display: inline-block;
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
     margin-right: 8px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
+    margin-right: 4px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
+    width: 176px;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -650,14 +683,46 @@ li {
   color: #a4a4a4;
 }
 #con_page .wrp_slide_list .con_slide_list .box_slide_list li:last-child {
-  margin-right: 5%;
+  margin-right: 0;
 }
-#con_page .wrp_slide_list.comm .con_slide_list .box_slide_list {
-  display: flex;
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li:last-child {
+    margin-right: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li:last-child {
+    margin-right: 5%;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+@media print {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+@media only screen and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
+  }
 }
 #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li {
   border-radius: 16px;
   background-color: #f2f4f6;
+  margin-right: 8px;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li {
+    margin-right: 4px;
+  }
 }
 #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a {
   box-sizing: border-box;
@@ -702,6 +767,7 @@ li {
   overflow: hidden;
   text-overflow: ellipsis;
   word-break: break-all;
+  height: 82px;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .txt {
@@ -713,15 +779,20 @@ li {
     font-size: 82%;
   }
 }
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .txt {
+    height: 70px;
+  }
+}
 #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .box_util {
   display: flex;
-  margin-top: 50px;
+  margin-top: 30px;
   font-size: 82%;
   font-weight: normal;
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .box_util {
-    margin-top: 25%;
+    margin-top: 15%;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
@@ -755,33 +826,50 @@ li {
 #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li:first-child a .cate {
   color: white;
 }
+#con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li:last-child {
+  margin-right: 5%;
+}
 #con_page .con_wrd_list {
   padding: 0 5%;
-  margin: 10% 0;
+  margin: 8% 0;
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_wrd_list {
-    padding: 0 3%;
+    padding: 0 4%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_wrd_list {
-    margin: 10% 0;
+    margin: 11% 0;
   }
 }
 #con_page .con_wrd_list .box_tit {
-  font-size: 125%;
-  font-weight: 500;
   margin-bottom: 3%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-right: 3%;
+  padding-right: 0;
+  font-size: 150%;
   font-weight: 500;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list .box_tit {
+    margin-bottom: 5%;
+  }
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_wrd_list .box_tit {
-    font-size: 113%;
+    padding-right: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list .box_tit {
+    padding-right: 3%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_wrd_list .box_tit {
+    font-size: 125%;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -789,9 +877,37 @@ li {
     font-size: 94%;
   }
 }
+#con_page .con_wrd_list .box_tit .tit {
+  display: inline-block;
+  font-weight: 700;
+}
+#con_page .con_wrd_list .box_tit .more {
+  font-weight: normal;
+  font-size: 60%;
+  display: inline-flex;
+  align-items: center;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_wrd_list .box_tit .more {
+    font-size: 70%;
+  }
+}
 @media only screen and (max-width: 767px) {
-  #con_page .con_wrd_list .box_tit {
-    margin-bottom: 5%;
+  #con_page .con_wrd_list .box_tit .more {
+    font-size: 70%;
+  }
+}
+#con_page .con_wrd_list .box_tit .more:after {
+  content: "";
+  display: inline-block;
+  width: 7px;
+  height: 10px;
+  background: url(../imgs/common/ic/ic_next.svg) no-repeat center;
+  margin-left: 0.5em;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_wrd_list .box_tit .more:after {
+    margin-left: 0.3em;
   }
 }
 #con_page .con_wrd_list .box_wrd_list {
@@ -803,11 +919,6 @@ li {
   width: 19.2%;
   margin-left: 1%;
   margin-bottom: 5%;
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .con_wrd_list .box_wrd_list li {
-    width: 24.25%;
-  }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_wrd_list .box_wrd_list li {
@@ -855,47 +966,62 @@ li {
     margin-top: 3%;
   }
 }
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 768px) {
   #con_page .con_wrd_list .box_wrd_list li:nth-child(5n+1) {
     margin-left: 0;
   }
 }
-@media print {
-  #con_page .con_wrd_list .box_wrd_list li:nth-child(5n+1) {
-    margin-left: 0;
-  }
-}
-@media only screen and (max-width: 1199px) {
+@media only screen and (max-width: 767px) {
   #con_page .con_wrd_list .box_wrd_list li:nth-child(4n+1) {
     margin-left: 0;
   }
 }
 #con_page .con_slide_hot {
-  padding: 0 0 0 5%;
-  margin: 10% 0;
+  padding: 0 5%;
+  margin: 8% 0;
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_slide_hot {
-    padding: 0 0 0 3%;
+    padding: 0 0 0 4%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_slide_hot {
-    margin: 10% 0;
+    padding: 0 0 0 4%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_hot {
+    margin: 11% 0;
   }
 }
 #con_page .con_slide_hot .box_tit {
-  font-size: 125%;
-  font-weight: 500;
   margin-bottom: 3%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-right: 3%;
+  padding-right: 0;
+  font-size: 150%;
+  font-weight: 500;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_hot .box_tit {
+    margin-bottom: 5%;
+  }
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_slide_hot .box_tit {
-    font-size: 113%;
+    padding-right: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_hot .box_tit {
+    padding-right: 3%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_slide_hot .box_tit {
+    font-size: 125%;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -903,26 +1029,24 @@ li {
     font-size: 94%;
   }
 }
-@media only screen and (max-width: 767px) {
-  #con_page .con_slide_hot .box_tit {
-    margin-bottom: 5%;
-  }
-}
 #con_page .con_slide_hot .box_tit .tit {
-  font-weight: 500;
+  display: inline-block;
+  font-weight: 700;
 }
 #con_page .con_slide_hot .box_tit .more {
-  font-size: 82%;
   font-weight: normal;
+  font-size: 60%;
+  display: inline-flex;
+  align-items: center;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_slide_hot .box_tit .more {
-    font-size: 82%;
+    font-size: 70%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_slide_hot .box_tit .more {
-    font-size: 69%;
+    font-size: 70%;
   }
 }
 #con_page .con_slide_hot .box_tit .more:after {
@@ -933,10 +1057,15 @@ li {
   background: url(../imgs/common/ic/ic_next.svg) no-repeat center;
   margin-left: 0.5em;
 }
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_hot .box_tit .more:after {
+    margin-left: 0.3em;
+  }
+}
 #con_page .con_slide_hot .box_list ul {
   display: block;
   padding-right: 1.5em;
-  min-width: 320px;
+  max-width: 320px;
 }
 #con_page .con_slide_hot .box_list ul li {
   width: 350px;
@@ -944,8 +1073,8 @@ li {
   box-sizing: border-box;
   align-items: center;
   border-bottom: 1px solid #e6e6e6;
-  padding-bottom: 3%;
-  margin-bottom: 3%;
+  padding-bottom: 5%;
+  margin-bottom: 5%;
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_slide_hot .box_list ul li {
@@ -1027,6 +1156,192 @@ li {
 }
 #con_page .con_slide_hot .box_list ul li .box_txt dd small:first-child:before {
   display: none;
+}
+#con_page .con_story {
+  padding: 0 5%;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story {
+    padding: 0 4%;
+  }
+}
+#con_page .con_story .box_tit {
+  margin-bottom: 3%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 0;
+  font-size: 150%;
+  font-weight: 500;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story .box_tit {
+    margin-bottom: 5%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_story .box_tit {
+    padding-right: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story .box_tit {
+    padding-right: 3%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_story .box_tit {
+    font-size: 125%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story .box_tit {
+    font-size: 94%;
+  }
+}
+#con_page .con_story .box_tit .tit {
+  display: inline-block;
+  font-weight: 700;
+}
+#con_page .con_story .box_tit .more {
+  font-weight: normal;
+  font-size: 60%;
+  display: inline-flex;
+  align-items: center;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_story .box_tit .more {
+    font-size: 70%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story .box_tit .more {
+    font-size: 70%;
+  }
+}
+#con_page .con_story .box_tit .more:after {
+  content: "";
+  display: inline-block;
+  width: 7px;
+  height: 10px;
+  background: url(../imgs/common/ic/ic_next.svg) no-repeat center;
+  margin-left: 0.5em;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story .box_tit .more:after {
+    margin-left: 0.3em;
+  }
+}
+#con_page .con_story .box_story .story_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+#con_page .con_story .box_story .story_list li {
+  width: 49%;
+  height: 240px;
+  margin-bottom: 2%;
+  background-color: #f2f4f6;
+  border-radius: 16px;
+  overflow: hidden;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story .box_story .story_list li {
+    width: 48%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story .box_story .story_list li {
+    height: 55vw;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story .box_story .story_list li {
+    margin-bottom: 4%;
+  }
+}
+#con_page .con_story .box_story .story_list li a {
+  display: block;
+  box-sizing: border-box;
+  position: relative;
+  height: 100%;
+}
+#con_page .con_story .box_story .story_list li a .tit {
+  font-size: 150%;
+  font-weight: 500;
+  z-index: 5;
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  color: white;
+  padding: 8%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_story .box_story .story_list li a .tit {
+    font-size: 125%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story .box_story .story_list li a .tit {
+    font-size: 94%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story .box_story .story_list li a .tit {
+    padding: 10%;
+  }
+}
+#con_page .con_story .box_story .story_list li a .tit .stxt, #con_page .con_story .box_story .story_list li a .tit .txt {
+  display: block;
+}
+#con_page .con_story .box_story .story_list li a .tit .stxt {
+  font-weight: 400;
+  font-size: 82%;
+  font-weight: normal;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_story .box_story .story_list li a .tit .stxt {
+    font-size: 82%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_story .box_story .story_list li a .tit .stxt {
+    font-size: 69%;
+  }
+}
+#con_page .con_story .box_story .story_list li a .tit .txt {
+  font-weight: bold;
+}
+#con_page .con_story .box_story .story_list li a .img {
+  width: 100%;
+  height: 100%;
+}
+#con_page .con_story .box_story .story_list li a .img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#con_page .con_story .box_story .story_list li a:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.15);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+}
+#con_page .con_bn + section {
+  margin-top: 8%;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_bn + section {
+    margin-top: 8%;
+  }
 }
 #con_page .btn_more {
   margin-top: 50px;
