--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -16,14 +16,15 @@
     .slider-count {
       position: absolute;
       left: 4%;
-      bottom: 8%;
+      line-height: 1.2;
+      bottom: 10%;
       border: 1px solid $gray;
       border-radius: 100px;
-      padding: 0 3%;
+      padding: 0 2%;
       color: white;
       background-color: rgba(0,0,0,0.3);
       display: inline-block;
-      @include fsz-cha(13,13,11);
+      @include fsz-cha(13,13,9);
       letter-spacing: 0.2em;
   
     }
