--- a/css/common.css
+++ b/css/common.css
@@ -20,7 +20,6 @@
 html {
   line-height: 1.5;
   overflow-x: hidden;
-  max-width: 1100px;
 }
 html em {
   font-style: normal;
@@ -155,6 +154,20 @@ li {
 #header .logo a {
   display: block;
 }
+#header .p_tit {
+  font-size: 150%;
+  font-weight: 500;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #header .p_tit {
+    font-size: 125%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #header .p_tit {
+    font-size: 94%;
+  }
+}
 #header .box_gnav {
   position: relative;
 }
@@ -242,6 +255,12 @@ li {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+  #header .box_gnav {
+    height: 80vh;
+  }
+  #header .p_tit {
+    display: none;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
@@ -465,7 +484,7 @@ li {
   width: calc(100% - 245px);
   margin-top: 0;
   box-sizing: border-box;
-  padding-bottom: 0;
+  padding-bottom: 100px;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page {
@@ -489,7 +508,7 @@ li {
 }
 #con_page .wrp_slide_list {
   padding: 0 5%;
-  margin: 8% 0;
+  margin: 5% 0;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .wrp_slide_list {
@@ -575,26 +594,17 @@ li {
 }
 #con_page .wrp_slide_list .con_slide_list .box_slide_list {
   width: 100%;
+  position: relative;
 }
 #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
-  margin-right: 0;
-  width: 24%;
+  margin-right: 8px;
+  width: 176px;
   white-space: normal;
   display: inline-block;
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
-    margin-right: 8px;
-  }
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
     margin-right: 4px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
-    width: 176px;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -669,9 +679,6 @@ li {
     font-size: 57%;
   }
 }
-#con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt .p_wrd .c-num, #con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt .p_count .c-num, #con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt .p_member .c-num {
-  margin-left: 0.5em;
-}
 #con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt .p_wrd .c-num strong, #con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt .p_count .c-num strong, #con_page .wrp_slide_list .con_slide_list .box_slide_list li a .box_txt .p_member .c-num strong {
   color: #5726cb;
   font-weight: 600;
@@ -695,16 +702,32 @@ li {
     margin-right: 5%;
   }
 }
+#con_page .wrp_slide_list .con_slide_list .box_slide_list .slick-arrow {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  text-indent: -9999px;
+  line-height: 1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 2;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list .slick-arrow.slick-prev {
+  left: 0;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list .slick-arrow.slick-next {
+  right: 0;
+}
 @media only screen and (min-width: 1200px) {
   #con_page .wrp_slide_list .con_slide_list .box_slide_list {
-    display: flex;
-    justify-content: space-between;
+    white-space: nowrap;
   }
 }
 @media print {
   #con_page .wrp_slide_list .con_slide_list .box_slide_list {
-    display: flex;
-    justify-content: space-between;
+    white-space: nowrap;
   }
 }
 @media only screen and (max-width: 1199px) {
@@ -829,9 +852,72 @@ li {
 #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li:last-child {
   margin-right: 5%;
 }
+#con_page .con_slide_nav {
+  padding: 0 5%;
+  margin: 0 0 5%;
+  background-color: white;
+  position: sticky;
+  top: 0;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_slide_nav {
+    padding: 0 0 0 4%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_nav {
+    padding: 0 0 0 4%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_nav {
+    margin: 11% 0;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_nav {
+    top: 60px;
+  }
+}
+#con_page .con_slide_nav .box_slide_nav .slide_list {
+  width: 100%;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  white-space: nowrap;
+}
+#con_page .con_slide_nav .box_slide_nav .slide_list li {
+  display: inline-block;
+}
+#con_page .con_slide_nav .box_slide_nav .slide_list li a {
+  font-size: 113%;
+  font-weight: normal;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_slide_nav .box_slide_nav .slide_list li a {
+    font-size: 113%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_nav .box_slide_nav .slide_list li a {
+    font-size: 82%;
+  }
+}
+#con_page .con_slide_nav .box_slide_nav .slide_list li:last-child {
+  margin-right: 0;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_slide_nav .box_slide_nav .slide_list li:last-child {
+    margin-right: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_slide_nav .box_slide_nav .slide_list li:last-child {
+    margin-right: 5%;
+  }
+}
 #con_page .con_wrd_list {
   padding: 0 5%;
-  margin: 8% 0;
+  margin: 5% 0;
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_wrd_list {
@@ -916,9 +1002,14 @@ li {
 }
 #con_page .con_wrd_list .box_wrd_list li {
   text-align: center;
-  width: 19.2%;
+  width: 15.83%;
   margin-left: 1%;
   margin-bottom: 5%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_wrd_list .box_wrd_list li {
+    width: 19.2%;
+  }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_wrd_list .box_wrd_list li {
@@ -966,7 +1057,17 @@ li {
     margin-top: 3%;
   }
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1200px) {
+  #con_page .con_wrd_list .box_wrd_list li:nth-child(6n+1) {
+    margin-left: 0;
+  }
+}
+@media print {
+  #con_page .con_wrd_list .box_wrd_list li:nth-child(6n+1) {
+    margin-left: 0;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_wrd_list .box_wrd_list li:nth-child(5n+1) {
     margin-left: 0;
   }
@@ -978,7 +1079,7 @@ li {
 }
 #con_page .con_slide_hot {
   padding: 0 5%;
-  margin: 8% 0;
+  margin: 5% 0;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_slide_hot {
@@ -1276,7 +1377,7 @@ li {
   top: 0;
   left: 0;
   color: white;
-  padding: 8%;
+  padding: 5%;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_story .box_story .story_list li a .tit {
@@ -1286,6 +1387,11 @@ li {
 @media only screen and (max-width: 767px) {
   #con_page .con_story .box_story .story_list li a .tit {
     font-size: 94%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_story .box_story .story_list li a .tit {
+    padding: 8%;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -1335,13 +1441,62 @@ li {
   left: 0;
   z-index: 3;
 }
-#con_page .con_bn + section {
-  margin-top: 8%;
+#con_page .con_bn + section, #con_page .con_fix_top + section {
+  margin-top: 5%;
 }
 @media only screen and (max-width: 767px) {
-  #con_page .con_bn + section {
+  #con_page .con_bn + section, #con_page .con_fix_top + section {
     margin-top: 8%;
   }
+}
+#con_page .con_fix_top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  box-sizing: border-box;
+  padding: 20px;
+  border-bottom: 1px solid #e6e6e6;
+  padding: 1% 5%;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_fix_top {
+    padding: 2% 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_fix_top {
+    padding: 2% 5%;
+  }
+}
+#con_page .con_fix_top .box_search {
+  display: flex;
+  align-items: center;
+}
+#con_page .con_fix_top .box_search input[type=search] {
+  background-color: #f2f4f6;
+  box-sizing: border-box;
+  width: 300px;
+  padding: 10px 10px 10px 50px;
+  border-radius: 8px;
+  position: relative;
+}
+#con_page .con_fix_top .box_search:before {
+  position: absolute;
+  content: "";
+  width: 16px;
+  height: 16px;
+  background: url(../imgs/common/ic/ic_search.svg) no-repeat center;
+  z-index: 2;
+  background-size: cover;
+  margin-left: 20px;
+}
+#con_page .con_fix_top .box_util .icons {
+  display: flex;
+  align-items: center;
 }
 #con_page .btn_more {
   margin-top: 50px;
@@ -1389,6 +1544,22 @@ li {
 @media only screen and (max-width: 767px) {
   #con_page .btn_more a {
     display: block;
+  }
+}
+
+h1.p_tit {
+  font-size: 150%;
+  font-weight: 500;
+  font-weight: bold;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  h1.p_tit {
+    font-size: 125%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  h1.p_tit {
+    font-size: 94%;
   }
 }
 
