--- a/css/common.css
+++ b/css/common.css
@@ -156,7 +156,7 @@ li {
 }
 #header .p_tit {
   font-size: 150%;
-  font-weight: 500;
+  font-weight: 600;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #header .p_tit {
@@ -182,7 +182,12 @@ li {
 #header .box_gnav li a {
   display: flex;
   flex-wrap: wrap;
-  opacity: 0.3;
+  opacity: 1;
+}
+@media only screen and (max-width: 767px) {
+  #header .box_gnav li a {
+    opacity: 0.3;
+  }
 }
 #header .box_gnav li a span {
   font-size: 125%;
@@ -224,16 +229,65 @@ li {
     font-size: 57%;
   }
 }
-#header .box_util .box_sns {
+#header .box_util .box_icons {
+  display: flex;
+  justify-content: flex-start;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #header .box_util .box_icons {
+    justify-content: center;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #header .box_util .box_icons {
+    justify-content: center;
+  }
+}
+#header .box_util .box_icons li a {
   display: flex;
 }
-#header .box_util .box_sns li p {
+#header .box_util .box_icons li a .btn_icon {
   padding: 0.5em;
 }
-#header .box_util .address li {
-  font-family: "Open Sans", sans-serif;
-  font-size: 88%;
-  opacity: 0.5;
+#header .box_util .box_icons li a span {
+  font-size: 125%;
+  font-weight: bold;
+  display: block;
+  margin-right: 15px;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #header .box_util .box_icons li a span {
+    font-size: 100%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #header .box_util .box_icons li a span {
+    font-size: 75%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #header .box_util .box_icons li a span {
+    margin-right: 0;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #header .box_util .box_icons li a span {
+    margin-right: 0;
+  }
+}
+#header .box_util .box_icons li a em {
+  font-size: 100%;
+  display: block;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #header .box_util .box_icons li a em {
+    font-size: 88%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #header .box_util .box_icons li a em {
+    font-size: 57%;
+  }
 }
 @media only screen and (min-width: 1200px) and (max-width: 1560px) {
   #header {
@@ -507,22 +561,16 @@ li {
   }
 }
 #con_page .wrp_slide_list {
-  padding: 0 5%;
-  margin: 5% 0;
+  padding: 70px 5% 0 5%;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .wrp_slide_list {
-    padding: 0 0 0 4%;
+    padding: 8% 0 0 4%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_slide_list {
-    padding: 0 0 0 4%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .wrp_slide_list {
-    margin: 11% 0;
+    padding: 11% 0 0 4%;
   }
 }
 #con_page .wrp_slide_list .box_tit {
@@ -532,7 +580,7 @@ li {
   align-items: center;
   padding-right: 0;
   font-size: 150%;
-  font-weight: 500;
+  font-weight: 600;
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_slide_list .box_tit {
@@ -597,14 +645,24 @@ li {
   position: relative;
 }
 #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
-  margin-right: 8px;
-  width: 176px;
+  margin-right: 16px;
+  width: 181.1px;
   white-space: normal;
   display: inline-block;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
+    margin-right: 8px;
+  }
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
     margin-right: 4px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list .con_slide_list .box_slide_list li {
+    width: 176px;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -706,28 +764,40 @@ li {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  text-indent: -9999px;
   line-height: 1;
   position: absolute;
   top: 0;
   bottom: 0;
+  background-color: white;
   margin: auto;
   z-index: 2;
 }
 #con_page .wrp_slide_list .con_slide_list .box_slide_list .slick-arrow.slick-prev {
-  left: 0;
+  left: -2em;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list .slick-arrow.slick-prev:before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f104";
+  font-size: 1.5em;
 }
 #con_page .wrp_slide_list .con_slide_list .box_slide_list .slick-arrow.slick-next {
-  right: 0;
+  right: -2em;
+}
+#con_page .wrp_slide_list .con_slide_list .box_slide_list .slick-arrow.slick-next:before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f105";
+  font-size: 1.5em;
 }
 @media only screen and (min-width: 1200px) {
   #con_page .wrp_slide_list .con_slide_list .box_slide_list {
-    white-space: nowrap;
+    display: flex;
   }
 }
 @media print {
   #con_page .wrp_slide_list .con_slide_list .box_slide_list {
-    white-space: nowrap;
+    display: flex;
   }
 }
 @media only screen and (max-width: 1199px) {
@@ -740,7 +810,12 @@ li {
 #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li {
   border-radius: 16px;
   background-color: #f2f4f6;
-  margin-right: 8px;
+  margin-right: 16px;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li {
+    margin-right: 8px;
+  }
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li {
@@ -761,19 +836,19 @@ li {
   }
 }
 #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .cate {
-  font-size: 82%;
+  font-size: 88%;
   font-weight: normal;
   margin-bottom: 20px;
   color: #a4a4a4;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .cate {
-    font-size: 82%;
+    font-size: 88%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .cate {
-    font-size: 69%;
+    font-size: 75%;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -810,7 +885,7 @@ li {
 #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .box_util {
   display: flex;
   margin-top: 30px;
-  font-size: 82%;
+  font-size: 88%;
   font-weight: normal;
 }
 @media only screen and (max-width: 767px) {
@@ -820,12 +895,12 @@ li {
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .box_util {
-    font-size: 82%;
+    font-size: 88%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .box_util {
-    font-size: 69%;
+    font-size: 75%;
   }
 }
 #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .box_util p {
@@ -833,7 +908,7 @@ li {
   color: #a4a4a4;
 }
 #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .box_util .logo {
-  width: 100px;
+  width: 70px;
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li a .box_util .logo {
@@ -850,24 +925,91 @@ li {
   color: white;
 }
 #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li:last-child {
-  margin-right: 5%;
+  margin-right: 0;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li:last-child {
+    margin-right: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list.comm .con_slide_list .box_slide_list li:last-child {
+    margin-right: 5%;
+  }
+}
+#con_page .wrp_slide_list.cate_nav {
+  padding-top: 50px;
+  top: 60px;
+  z-index: 10;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list.cate_nav {
+    padding-top: 4%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list.cate_nav {
+    padding-top: 0;
+  }
+}
+#con_page .wrp_slide_list.cate_nav .box_tit {
+  margin-bottom: 20px;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list.cate_nav .box_tit {
+    margin-bottom: 3%;
+  }
+}
+#con_page .wrp_slide_list.cate_nav .con_slide_list .box_slide_list li {
+  width: auto;
+  font-size: 100%;
+  font-weight: normal;
+  margin-right: 16px;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list.cate_nav .con_slide_list .box_slide_list li {
+    font-size: 100%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list.cate_nav .con_slide_list .box_slide_list li {
+    font-size: 69%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_slide_list.cate_nav .con_slide_list .box_slide_list li {
+    margin-right: 16px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list.cate_nav .con_slide_list .box_slide_list li {
+    margin-right: 5%;
+  }
+}
+#con_page .wrp_slide_list.cate_nav .con_slide_list .box_slide_list li.active:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  margin-top: 8px;
+  background-color: #5726cb;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list.cate_nav .con_slide_list .box_slide_list li.active:after {
+    margin-top: 0.5em;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_slide_list.cate_nav {
+    position: sticky;
+    background-color: white;
+  }
 }
 #con_page .con_slide_nav {
-  padding: 0 5%;
   margin: 0 0 5%;
   background-color: white;
   position: sticky;
   top: 0;
-}
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .con_slide_nav {
-    padding: 0 0 0 4%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .con_slide_nav {
-    padding: 0 0 0 4%;
-  }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_slide_nav {
@@ -916,17 +1058,16 @@ li {
   }
 }
 #con_page .con_wrd_list {
-  padding: 0 5%;
-  margin: 5% 0;
+  padding: 70px 5% 0 5%;
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_wrd_list {
-    padding: 0 4%;
+    padding: 8% 4% 0 4%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_wrd_list {
-    margin: 11% 0;
+    padding: 11% 4% 0 4%;
   }
 }
 #con_page .con_wrd_list .box_tit {
@@ -936,7 +1077,7 @@ li {
   align-items: center;
   padding-right: 0;
   font-size: 150%;
-  font-weight: 500;
+  font-weight: 600;
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_wrd_list .box_tit {
@@ -1002,23 +1143,18 @@ li {
 }
 #con_page .con_wrd_list .box_wrd_list li {
   text-align: center;
-  width: 15.83%;
-  margin-left: 1%;
+  width: 15%;
+  margin-left: 2%;
   margin-bottom: 5%;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_wrd_list .box_wrd_list li {
-    width: 19.2%;
+    width: 18.4%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_wrd_list .box_wrd_list li {
     width: 23.5%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .con_wrd_list .box_wrd_list li {
-    margin-left: 2%;
   }
 }
 #con_page .con_wrd_list .box_wrd_list li .icon a {
@@ -1078,22 +1214,16 @@ li {
   }
 }
 #con_page .con_slide_hot {
-  padding: 0 5%;
-  margin: 5% 0;
+  padding: 70px 5% 0 5%;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_slide_hot {
-    padding: 0 0 0 4%;
+    padding: 8% 0 0 4%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_slide_hot {
-    padding: 0 0 0 4%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  #con_page .con_slide_hot {
-    margin: 11% 0;
+    padding: 11% 0 0 4%;
   }
 }
 #con_page .con_slide_hot .box_tit {
@@ -1103,7 +1233,7 @@ li {
   align-items: center;
   padding-right: 0;
   font-size: 150%;
-  font-weight: 500;
+  font-weight: 600;
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_slide_hot .box_tit {
@@ -1219,18 +1349,18 @@ li {
   }
 }
 #con_page .con_slide_hot .box_list ul li .box_txt dt .ic_star {
-  font-size: 82%;
+  font-size: 88%;
   font-weight: normal;
   display: flex;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_slide_hot .box_list ul li .box_txt dt .ic_star {
-    font-size: 82%;
+    font-size: 88%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_slide_hot .box_list ul li .box_txt dt .ic_star {
-    font-size: 69%;
+    font-size: 75%;
   }
 }
 #con_page .con_slide_hot .box_list ul li .box_txt dt .ic_star img {
@@ -1238,18 +1368,18 @@ li {
   margin-right: 0.2em;
 }
 #con_page .con_slide_hot .box_list ul li .box_txt dd {
-  font-size: 82%;
+  font-size: 88%;
   font-weight: normal;
   color: #a4a4a4;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_slide_hot .box_list ul li .box_txt dd {
-    font-size: 82%;
+    font-size: 88%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_slide_hot .box_list ul li .box_txt dd {
-    font-size: 69%;
+    font-size: 75%;
   }
 }
 #con_page .con_slide_hot .box_list ul li .box_txt dd small:before {
@@ -1259,11 +1389,16 @@ li {
   display: none;
 }
 #con_page .con_story {
-  padding: 0 5%;
+  padding: 70px 5% 0 5%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_story {
+    padding: 8% 4% 0 4%;
+  }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_story {
-    padding: 0 4%;
+    padding: 11% 4% 0 4%;
   }
 }
 #con_page .con_story .box_tit {
@@ -1273,7 +1408,7 @@ li {
   align-items: center;
   padding-right: 0;
   font-size: 150%;
-  font-weight: 500;
+  font-weight: 600;
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_story .box_tit {
@@ -1369,7 +1504,7 @@ li {
 }
 #con_page .con_story .box_story .story_list li a .tit {
   font-size: 150%;
-  font-weight: 500;
+  font-weight: 600;
   z-index: 5;
   position: absolute;
   width: 100%;
@@ -1404,17 +1539,17 @@ li {
 }
 #con_page .con_story .box_story .story_list li a .tit .stxt {
   font-weight: 400;
-  font-size: 82%;
+  font-size: 88%;
   font-weight: normal;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_story .box_story .story_list li a .tit .stxt {
-    font-size: 82%;
+    font-size: 88%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_story .box_story .story_list li a .tit .stxt {
-    font-size: 69%;
+    font-size: 75%;
   }
 }
 #con_page .con_story .box_story .story_list li a .tit .txt {
@@ -1441,12 +1576,122 @@ li {
   left: 0;
   z-index: 3;
 }
-#con_page .con_bn + section, #con_page .con_fix_top + section {
-  margin-top: 5%;
+#con_page .con_bn {
+  position: relative;
+  margin: 50px 5% 0 5%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_bn {
+    margin: 4% 4% 0 4%;
+  }
 }
 @media only screen and (max-width: 767px) {
-  #con_page .con_bn + section, #con_page .con_fix_top + section {
-    margin-top: 8%;
+  #con_page .con_bn {
+    margin: 11% 4% 0 4%;
+  }
+}
+#con_page .con_bn .box_bn {
+  box-sizing: border-box;
+  background-color: #EDE7FE;
+  border-radius: 16px;
+  padding: 15px 20px 50px;
+  display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_bn .box_bn {
+    padding: 3% 5% 8%;
+  }
+}
+#con_page .con_bn .box_bn .box_txt strong, #con_page .con_bn .box_bn .box_txt span {
+  display: block;
+}
+#con_page .con_bn .box_bn .box_txt strong {
+  font-size: 150%;
+  font-weight: 600;
+  font-weight: bold;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_bn .box_bn .box_txt strong {
+    font-size: 125%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_bn .box_bn .box_txt strong {
+    font-size: 94%;
+  }
+}
+#con_page .con_bn .box_bn .box_txt span {
+  font-size: 100%;
+  font-weight: normal;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_bn .box_bn .box_txt span {
+    font-size: 100%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_bn .box_bn .box_txt span {
+    font-size: 69%;
+  }
+}
+#con_page .con_bn .box_bn .box_img {
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+}
+#con_page .con_bn .box_bn .box_img img {
+  height: 100%;
+}
+#con_page .con_bn .slider-count {
+  position: absolute;
+  left: 2%;
+  line-height: 1.2;
+  bottom: 10%;
+  border: 1px solid #c1c1c1;
+  border-radius: 100px;
+  padding: 0 1%;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: inline-block;
+  font-size: 82%;
+  letter-spacing: 0.2em;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_bn .slider-count {
+    left: 5%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_bn .slider-count {
+    font-size: 82%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_bn .slider-count {
+    font-size: 57%;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #con_page .con_bn {
+    max-width: 970px;
+  }
+}
+@media print {
+  #con_page .con_bn {
+    max-width: 970px;
+  }
+}
+#con_page .con_bn + section, #con_page .con_fix_top + section, #con_page .con_wrd_list + section {
+  padding-top: 3%;
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_bn + section, #con_page .con_fix_top + section, #con_page .con_wrd_list + section {
+    padding-top: 8%;
   }
 }
 #con_page .con_fix_top {
@@ -1461,15 +1706,16 @@ li {
   position: sticky;
   top: 0;
   z-index: 100;
+  min-height: 70px;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   #con_page .con_fix_top {
-    padding: 2% 5%;
+    padding: 2% 4%;
   }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_fix_top {
-    padding: 2% 5%;
+    padding: 2% 4%;
   }
 }
 #con_page .con_fix_top .box_search {
@@ -1497,6 +1743,27 @@ li {
 #con_page .con_fix_top .box_util .icons {
   display: flex;
   align-items: center;
+}
+#con_page .con_fix_top .box_util .icons li {
+  margin-left: 1em;
+}
+#con_page .con_fix_top .box_util .icons li .btn_bell a {
+  padding: 0.5em;
+}
+#con_page .con_fix_top .box_util .icons li .btn_user {
+  overflow: hidden;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+}
+#con_page .con_fix_top .box_util .icons li .btn_user a {
+  display: block;
+}
+#con_page .con_fix_top .box_util .icons li .btn_user a img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 #con_page .btn_more {
   margin-top: 50px;
@@ -1529,6 +1796,16 @@ li {
   font-size: 90%;
   margin-left: 8px;
 }
+@media only screen and (min-width: 1200px) {
+  #con_page .wrp_slide_list, #con_page .con_wrd_list, #con_page .con_slide_hot, #con_page .con_story {
+    max-width: 970px;
+  }
+}
+@media print {
+  #con_page .wrp_slide_list, #con_page .con_wrd_list, #con_page .con_slide_hot, #con_page .con_story {
+    max-width: 970px;
+  }
+}
 @media only screen and (min-width: 1200px) and (max-width: 1560px) {
   #con_page {
     width: calc(100% - 220px);
@@ -1549,7 +1826,7 @@ li {
 
 h1.p_tit {
   font-size: 150%;
-  font-weight: 500;
+  font-weight: 600;
   font-weight: bold;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
