--- a/css/scss/comm.scss
+++ b/css/scss/comm.scss
@@ -9,25 +9,136 @@
     .logo {
       display: none;
     }
+	.p_tit {
+		display: block;
+		font-weight: bold;
+	}
 
   }
-  
-
 }
 
 #con_page {
-  display: block;
-  background-color: $bgGray;
-	.wrp_slide_list {
-		&.comm {
-			.con_slide_list {
-				.box_slide_list {
-					li {
-						background-color: white;
-					}
+	@include cV(background-color, white, $bgGray);
+	@include cV(padding-bottom, 200px, 30%);
+	.wrp_slide_list.comm {
+		.con_slide_list {
+			.box_slide_list {
+				li {
+					@include cV(background-color, $bgGray, white);
 				}
 			}
 		}
 	}
+
+	.con_bn {
+		@include cV(margin, 50px 5% 0 5%, 4% 4% 0 4%, 8% 4% 0 4%);
+		.box_bn {
+			background-color: $pointColorLight;
+			box-sizing: border-box;
+		}
+	}
+
+	.con_post {
+		@include cV(margin, 0 5% 0 5%, 0 4% 0 4%, 0 4% 0 4%);
+
+		max-width: 970px;
+		.box_post {
+			background-color: white;
+			border: 1px solid $lightGray;
+			border-radius: 16px;
+			box-sizing: border-box;
+			@include cV(padding, 20px, 4%);
+			@include cV(margin-bottom, 16px, 2%);
+			.box_profile {
+				@include cV(margin-bottom, 20px, 3%);
+				display: flex;
+				justify-content: space-between;
+				.user_info {
+					align-items: center;
+					display: flex;
+					width: 65%;
+					.box_pic {
+						position: relative;
+						.pic {
+							width: 48px;
+							height: 48px;
+							border-radius: 50%;
+							overflow: hidden;
+						}
+						.ic_md {
+							position: absolute;
+							right: 0;
+							bottom: 0;
+							line-height: 1;
+						}
+					}
+					.txt_info {
+						@include cV(margin-left, 10px, 4%);
+						width: calc(100% - 48px);
+						.info {
+							display: inline-flex;
+							align-items: center;
+							width: 100%;
+							@include txt_l;
+							span {
+								display: inline-block;
+							}
+							.star {
+								@include cV(margin, 0 4px 0 8px, 0 2% 0 3%);
+								line-height: 0;
+								img {width: 8px;}
+							}
+							.score {@include txt_mini;} 
+						}
+						.world {
+							@include txt_xs;
+							color: $dkGray;
+
+						}
+					}
+				}
+				.cate {
+					width: 35%;
+					@include txt_s;
+					text-align: right;
+				}
+			}
+			.box_txt {
+				.tit {
+					font-weight: bold;
+					@include txt_l;
+					font-weight: 600;
+					@include cV(margin-bottom, 8px, 3%);
+					display: -webkit-box;
+					-webkit-box-orient: vertical;
+					-webkit-line-clamp: 2;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					word-break: break-all;
+					@include cV(max-height, 60px, 45px);
+
+				}
+				.txt {
+					@include txt_m;
+					color: $dkGray;
+					display: -webkit-box;
+					-webkit-box-orient: vertical;
+					-webkit-line-clamp: 2;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					word-break: break-all;
+					@include cV(max-height, 82px, 60px);
+
+					
+				}
+			}
+			@include mq(pc) {
+				.box_txt a:hover {
+					.tit {text-decoration: underline;}
+				}
+			}
+		}
+	}
+
   
 }
