--- a/css/scss/common.scss
+++ b/css/scss/common.scss
@@ -120,7 +120,7 @@ li {list-style-type: none;}
 			a {
 				display: flex;
 				flex-wrap: wrap;
-				opacity: 0.3;
+				@include cV(opacity, 1, 0.3);
 				span {
 					@include fsz-cha(20,16,12);
 					font-weight: bold;
@@ -135,22 +135,27 @@ li {list-style-type: none;}
 		}
 	}
 	.box_util {
-		.box_sns {
+		.box_icons {
 			display: flex;
+			@include cV(justify-content, flex-start, center, center);
 			li {
-				p {
-					padding: 0.5em;
+				a {
+					display: flex;
+					.btn_icon {
+						padding: 0.5em;
+					}
+					span {
+						@include fsz-cha(20,16,12);
+						font-weight: bold;
+						display: block;
+						@include cV(margin-right, 15px, 0, 0);
+					}
+					em {
+						@include fsz-cha(16,14,9);
+						display: block;
+					}
 				}
 			}
-		}
-		.address {
-			li {
-				@include font('en');
-				@include fsz(14,16);
-				opacity: 0.5;
-
-			}
-			
 		}
 	}
 
@@ -379,8 +384,7 @@ li {list-style-type: none;}
 
 	// slide_list_form
 	.wrp_slide_list {
-		@include cV(padding, 0 5%, 0 0 0 4%, 0 0 0 4%);
-		@include cV(margin, 5% 0, 11% 0);
+		@include cV(padding, 70px 5% 0 5%, 8% 0 0 4%, 11% 0 0 4%);
 		.box_tit {
 			@include main_tit;
 		}
@@ -389,8 +393,8 @@ li {list-style-type: none;}
 				width: 100%;
 				position: relative;
 				li {
-					@include cV(margin-right, 8px, 4px);
-					@include cV(width, 176px, 42%);
+					@include cV(margin-right, 16px, 8px, 4px);
+					@include cV(width, 181.1px, 176px, 42%);
 					white-space: normal;
 					display: inline-block;
 					a {
@@ -450,18 +454,38 @@ li {list-style-type: none;}
 					width: 50px;
 					height: 50px;
 					border-radius: 50%;
-					text-indent: -9999px;
 					line-height: 1;
 					position: absolute;
 					top: 0;
 					bottom: 0;
+					background-color: white;
 					margin: auto;
 					z-index: 2;
-					&.slick-prev {left: 0;}
-					&.slick-next {right: 0;}
+					&.slick-prev {
+						left: -2em;
+						&:before {
+							font-family: "Font Awesome 5 Free";
+							font-weight: 900;
+							content: "\f104";
+							font-size: 1.5em;
+
+						}
+						
+					}
+					&.slick-next {
+						right: -2em;
+						&:before {
+							font-family: "Font Awesome 5 Free";
+							font-weight: 900;
+							content: "\f105";
+							font-size: 1.5em;
+						}
+
+					}
 				}
 				@include mq(pc) {
-					white-space: nowrap;
+					display: flex;
+					
 				}
 				@include mq(tab_sp) {
 					overflow-x: auto;
@@ -476,7 +500,7 @@ li {list-style-type: none;}
 					li {
 						border-radius: 16px;
 						background-color: $bgGray;
-						@include cV(margin-right, 8px, 4px);
+						@include cV(margin-right, 16px, 8px, 4px);
 						a {
 							box-sizing: border-box;
 							@include cV(padding, 10%, 10%);
@@ -508,7 +532,7 @@ li {list-style-type: none;}
 									color: $dkGray;
 								}
 								.logo {
-									@include cV(width, 100px, 40%);
+									@include cV(width, 70px, 40%);
 								}
 								
 							}
@@ -521,16 +545,47 @@ li {list-style-type: none;}
 							}
 						}
 						&:last-child {
-							margin-right: 5%;
+							@include cV(margin-right, 0, 5%, 5%);
 						}
 					}
 				}
 			}
 		}
+		&.cate_nav {
+			@include cV(padding-top, 50px, 4%, 0);
+			top: 60px;
+			z-index: 10;
+			.box_tit {
+				@include cV(margin-bottom, 20px, 3%);
+			}
+			.con_slide_list {
+				.box_slide_list {
+
+					li {
+						width: auto;
+						@include txt_m;
+						@include cV(margin-right, 16px, 16px, 5%);
+						&.active {
+							&:after {
+								content: "";
+								display: block;
+								width: 100%;
+								height: 2px;
+								@include cV(margin-top, 8px, 0.5em);
+								background-color: $pointColor;
+							}
+						}
+					}
+				}
+			}
+			@include mq(sp) {
+				position: sticky;
+				background-color: white;
+			}
+		}
 	}
 
 	.con_slide_nav {
-		@include cV(padding, 0 5%, 0 0 0 4%, 0 0 0 4%);
 		@include cV(margin, 0 0 5%, 11% 0);
 		background-color: white;
 		position: sticky;
@@ -559,8 +614,7 @@ li {list-style-type: none;}
 
 	// world_icon_list_form
 	.con_wrd_list {
-		@include cV(padding, 0 5%, 0 4%);
-		@include cV(margin, 5% 0, 11% 0);
+		@include cV(padding, 70px 5% 0 5%, 8% 4% 0 4%, 11% 4% 0 4%);
 		.box_tit {
 			@include main_tit;
 		}
@@ -569,8 +623,8 @@ li {list-style-type: none;}
 			flex-wrap: wrap;
 			li {
 				text-align: center;
-				@include cV(width, 15.83%, 19.2%, 23.5%);
-				@include cV(margin-left, 1%, 2%);
+				@include cV(width, 15%, 18.4%, 23.5%);
+				margin-left: 2%;
 				margin-bottom: 5%;
 				.icon {
 					a {
@@ -611,8 +665,7 @@ li {list-style-type: none;}
 
 	// slide_hot
 	.con_slide_hot {
-		@include cV(padding, 0 5%, 0 0 0 4%, 0 0 0 4%);
-		@include cV(margin, 5% 0, 11% 0);
+		@include cV(padding, 70px 5% 0 5%, 8% 0 0 4%, 11% 0 0 4%);
 		.box_tit {
 			@include main_tit;
 		}
@@ -685,7 +738,7 @@ li {list-style-type: none;}
 
 	// con_story
 	.con_story {
-		@include cV(padding, 0 5%, 0 4%);
+		@include cV(padding, 70px 5% 0 5%, 8% 4% 0 4%, 11% 4% 0 4%);
 		.box_tit {
 			@include main_tit;
 		}
@@ -751,8 +804,63 @@ li {list-style-type: none;}
 		}
 	}
 
-	.con_bn + section, .con_fix_top + section {
-		@include cV(margin-top, 5%, 8%);
+	//Banner Content
+	.con_bn {
+		position: relative;
+		@include cV(margin, 50px 5% 0 5%, 4% 4% 0 4%, 11% 4% 0 4%);
+		.box_bn {
+			box-sizing: border-box;
+			background-color: $pointColorLight;
+			border-radius: 16px;
+			@include cV(padding, 15px 20px 50px, 3% 5% 8%);
+			display: flex;
+			justify-content: space-between;
+			.box_txt {
+				strong, span {display: block;}
+				strong {
+					@include tit_l;
+					font-weight: bold;
+				}
+				span {
+					@include txt_m;
+				}
+			}
+			.box_img {
+				width: auto;
+				height: auto;
+				position: absolute;
+				top: 0;
+				bottom: 0;
+				right: 0;
+				margin: auto;
+				img {
+					height: 100%;
+				}
+			}
+		}
+		.slider-count {
+			position: absolute;
+			@include cV(left, 2%, 5%);
+			line-height: 1.2;
+			bottom: 10%;
+			border: 1px solid $gray;
+			border-radius: 100px;
+			padding: 0 1%;
+			color: white;
+			background-color: rgba(0,0,0,0.3);
+			display: inline-block;
+			@include fsz-cha(13,13,9);
+			letter-spacing: 0.2em;
+		}
+		@include mq(pc) {
+			max-width: 970px;
+		}
+	}
+
+
+
+	.con_bn + section, .con_fix_top + section, .con_wrd_list + section {
+		@include cV(padding-top, 3%, 8%);
 	}
 
 	// con_fix_top
@@ -764,10 +872,11 @@ li {list-style-type: none;}
 		box-sizing: border-box;
 		padding: 20px;
 		border-bottom: 1px solid $lightGray;
-		@include cV(padding, 1% 5%, 2% 5%, 2% 5%);
+		@include cV(padding, 1% 5%, 2% 4%, 2% 4%);
 		position: sticky;
 		top: 0;
 		z-index: 100;
+		min-height: 70px;
 		.box_search {
 			display: flex;
 			align-items: center;
@@ -794,6 +903,26 @@ li {list-style-type: none;}
 			.icons {
 				display: flex;
 				align-items: center;
+				li {
+					margin-left: 1em;
+					.btn_bell a {
+						padding: 0.5em;
+					}
+					.btn_user {
+						overflow: hidden;
+						border-radius: 50%;
+						width: 32px;
+						height: 32px;
+						a {
+							display: block;
+							img {
+								width: 100%;
+								height: 100%;
+								object-fit: cover;
+							}
+						}
+					}
+				}
 			}
 			
 		}
@@ -817,6 +946,11 @@ li {list-style-type: none;}
 			font-size: 90%;
 			margin-left: 8px;
 		  }
+		}
+	}
+	@include mq(pc) {
+		.wrp_slide_list, .con_wrd_list, .con_slide_hot, .con_story {
+			max-width: 970px;
 		}
 	}
 
