--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -5,28 +5,16 @@
   .box_gnav li:nth-child(1) a {
     opacity: 1;
   }
-
+  @include mq(sp) {
+    .logo {
+      display: block;
+    }
+    .p_tit {
+      display: none;
+    }
+  }
 }
 
 #con_page {
   display: block;
-  .con_bn {
-    position: relative;
-    @extend %bw_l;
-    .slider-count {
-      position: absolute;
-      left: 4%;
-      line-height: 1.2;
-      bottom: 10%;
-      border: 1px solid $gray;
-      border-radius: 100px;
-      padding: 0 2%;
-      color: white;
-      background-color: rgba(0,0,0,0.3);
-      display: inline-block;
-      @include fsz-cha(13,13,9);
-      letter-spacing: 0.2em;
-  
-    }
-  }
 }
